# Smart-Financial-Advisor-EGX

./: .gitignore  EGX_Trading_System_4.ipynb  README.md  RUN_PROJECT_AR.md
backend/: .env.example  analyzer.py  app.py  chat_orchestrator.py  config.py  db.py  decision_engine.py  docker-compose.yaml  part2_generator.py  pyproject.toml  requirements.txt  run_part3.py  schemas.py  scraper.py  services.py  support_resistance.py
backend/models/: __init__.py  messages.py  users.py
frontend/: dashboard.html  index.html  register.html
modal_functions/: ai_model.py  requirements.txt
