[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.13.0",
    "bcrypt>=5.0.0",
    "browserforge>=1.2.4",
    "curl-cffi>=0.15.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "ipython>=9.12.0",
    "json-repair==0.25.0",
    "modal==1.3.5",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.2",
    "python-dotenv==1.0.0",
    "python-multipart>=0.0.26",
    "requests==2.31.0",
    "scrapling>=0.4.6",
    "sqlalchemy>=2.0.49",
    "transformers==5.3.0",
    "uvicorn>=0.44.0",
    "yfinance>=1.3.0",
]
